<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="132dp"
        android:layout_height="131dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintEnd_toStartOf="@+id/textView2"

        app:layout_constraintHorizontal_bias="0.347"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/img1"
        tools:layout_editor_absoluteY="116dp" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="134dp"
        android:layout_height="131dp"
        android:contentDescription="@string/fSira"
        app:srcCompat="@drawable/img2"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="524dp" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="133dp"
        android:layout_height="131dp"
        android:contentDescription="@string/app_name"
        app:srcCompat="@drawable/img3"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="17dp"
        tools:layout_editor_absoluteY="325dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Korzina"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="126dp"
        tools:layout_editor_absoluteY="16dp"
        tools:textSize="40dp"
        tools:textStyle="bold" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="35dp"
        android:layout_height="33dp"
        android:contentDescription="@string/app_name"
        app:srcCompat="@drawable/img_1"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="30dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/BlueCheese"
        android:textStyle="bold"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="178dp"
        tools:layout_editor_absoluteY="116dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="210dp"
        android:layout_height="101dp"
        android:text="@string/BlueCheeseInfo"
        tools:layout_editor_absoluteX="178dp"
        tools:layout_editor_absoluteY="144dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/VetchinaIGribi"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="177dp"
        tools:layout_editor_absoluteY="325dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="209dp"
        android:layout_height="0dp"
        android:text="@string/VetchinaIGribiInfo"
        tools:layout_editor_absoluteX="176dp"
        tools:layout_editor_absoluteY="357dp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="209dp"
        android:layout_height="0dp"
        android:text="@string/fSiraInfo"
        tools:layout_editor_absoluteX="177dp"
        tools:layout_editor_absoluteY="554dp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fSira"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="178dp"
        tools:layout_editor_absoluteY="522dp" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="372dp"
        android:layout_height="43dp"
        app:srcCompat="@drawable/img_2"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="247dp" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="21dp"
        android:layout_height="22dp"
        app:srcCompat="@drawable/img_5"
        tools:layout_editor_absoluteX="362dp"
        tools:layout_editor_absoluteY="257dp" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="87dp"
        android:layout_height="21dp"
        app:srcCompat="@drawable/img_4"
        tools:layout_editor_absoluteX="209dp"
        tools:layout_editor_absoluteY="260dp" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="375dp"
        android:layout_height="53dp"
        app:srcCompat="@drawable/img_6"
        tools:layout_editor_absoluteX="18dp"
        tools:layout_editor_absoluteY="456dp" />

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="375dp"
        android:layout_height="53dp"
        app:srcCompat="@drawable/img_6"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="655dp" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="281dp"
        android:layout_height="58dp"
        app:srcCompat="@drawable/img_7"
        tools:layout_editor_absoluteX="65dp"
        tools:layout_editor_absoluteY="668dp" />

</androidx.constraintlayout.widget.ConstraintLayout>